# staticlink

./: Cargo.toml
libexample/: Cargo.toml  build.rs  wrapper.h
libexample/src/: bindings.rs  lib.rs
src/: main.rs
