[package]
name = "staticlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["libexample"]

[dependencies]
libexample = { path = "libexample", version = "0.1.0" }

[build-dependencies]
bindgen = "0.60.1"
